# mpep-qa

./: .gitattributes  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync_hf.yml
data/2100/: s2101-2102.html.txt  s2103.html.txt  s2104.html.txt  s2105.html.txt  s2106.html.txt  s2107.html.txt  s2108.html.txt  s2109.01.html.txt  s2109.html.txt  s2110.html.txt  s2111.html.txt  s2112.html.txt  s2113.html.txt  s2114.html.txt  s2115.html.txt  s2116.html.txt  s2117.html.txt  s2118-2119.html.txt  s2120.html.txt  s2121.html.txt  s2122.html.txt  s2123.html.txt  s2124.html.txt  s2125.html.txt  s2126.html.txt  s2127.html.txt  s2128.html.txt  s2129.html.txt  s2130.html.txt  s2131.html.txt  s2132.html.txt  s2133.html.txt  s2134.html.txt  s2135.html.txt  s2136.html.txt  s2137.html.txt  s2138.html.txt  s2139.html.txt  s2140.html.txt  s2141.html.txt  (+41 more)
indices/: index_vector_2100.json
notebooks/: cost_estimation.ipynb
scripts/: get_mpep.py
